<resources>
    <string name="app_name">topgis-reporting</string>
    <string name="action_settings">Settings</string>
    <string name="gps_not_set">Unknown location</string>
    <string name="title_activity_add_report">Add Report</string>
    <string name="title_history">History</string>
    <string name="title_add_report">Add new report</string>
    <string name="save_button_label">Save</string>
    <string name="report_missing">Error. Report is missing</string>
    <string name="label_type">Type</string>
    <string name="label_create_time">Create time</string>
    <string name="label_send_time">Send time</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_description">Description</string>
    <string name="report_picture">Report picture</string>
    <string name="add_report_description_hint">Description of the report</string>
    <string name="delete">Delete</string>
    <string name="title_activity_report_detail">Report detail</string>
    <string name="message_report_deleted">Report has been deleted</string>
    <string name="menu_delete_all">Delete all reports</string>
    <string name="message_picture_deleted">Picture has been deleted</string>
    <string name="message_getting_location">Still getting location. Try again in few seconds</string>
    <string name="message_providers_disabled">Enable Location</string>
    <string name="label_picture">Picture</string>
    <string name="label_picture_delete">Delete picture</string>
    <string name="message_start_getting_location">Getting location ...</string>
    <string name="message_provider_disabled">Location is disabled, report can not created</string>
    <string name="message_picture_removed">Picture has been removed</string>
    <string name="message_permission_denied">App will not work without this permission</string>
    <string name="message_missing_permission">Location permission is missing</string>
    <string name="message_everything_deleted">Every report has been deleted</string>
    <string name="gps_unknown">Unknown</string>
    <string name="report_sent_true">Sent</string>
</resources>
